# SMILE-Classifier

./: .gitignore  pyproject.toml
notebooks/: model.ipynb
